RESOLVED FIXED68250
Web Inspector: limit the use of "Resource" term in the protocol.
https://bugs.webkit.org/show_bug.cgi?id=68250
Summary Web Inspector: limit the use of "Resource" term in the protocol.
Pavel Feldman
Reported 2011-09-16 09:35:34 PDT
Patch to follow.
Attachments
Patch (20.53 KB, patch)
2011-09-16 09:38 PDT, Pavel Feldman
no flags
Patch (20.54 KB, patch)
2011-09-20 07:12 PDT, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2011-09-16 09:38:12 PDT
Vsevolod Vlasov
Comment 2 2011-09-20 05:56:17 PDT
Comment on attachment 107667 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=107667&action=review > Source/WebCore/inspector/Inspector.json:76 > + { "name": "loaderId", "$ref": "Network.LoaderId", "description": "Identifier of the loader associated with this frame." }, How is that related to the bug description? > Source/WebCore/inspector/Inspector.json:351 > + { "name": "stackTrace", "$ref": "StackTrace", "optional": true, "description": "JavaScript stack trace for assertions and error messages." } And that? > Source/WebCore/inspector/Inspector.json:428 > + "description": "Network domain allows tracking network activities of the page. It exposes information about HTTP requests and responses, their headers, bodies, timing, etc.", It also exposes information about FTP, WebSocket, file:// and other types of activities. I think this descriptin is confusing.
Pavel Feldman
Comment 3 2011-09-20 07:08:07 PDT
Comment on attachment 107667 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=107667&action=review >> Source/WebCore/inspector/Inspector.json:76 >> + { "name": "loaderId", "$ref": "Network.LoaderId", "description": "Identifier of the loader associated with this frame." }, > > How is that related to the bug description? Drive-by making loaderId strong-typed. >> Source/WebCore/inspector/Inspector.json:351 >> + { "name": "stackTrace", "$ref": "StackTrace", "optional": true, "description": "JavaScript stack trace for assertions and error messages." } > > And that? Drive-by fix. >> Source/WebCore/inspector/Inspector.json:428 >> + "description": "Network domain allows tracking network activities of the page. It exposes information about HTTP requests and responses, their headers, bodies, timing, etc.", > > It also exposes information about FTP, WebSocket, file:// and other types of activities. I think this descriptin is confusing. Fixed.
Pavel Feldman
Comment 4 2011-09-20 07:12:29 PDT
Vsevolod Vlasov
Comment 5 2011-09-20 07:22:54 PDT
Looks good.
Pavel Feldman
Comment 6 2011-09-21 04:44:41 PDT
Note You need to log in before you can comment on or make changes to this bug.