Web Inspector: limit the use of "Resource" term in the protocol. https://bugs.webkit.org/show_bug.cgi?id=68250

Reviewed by Yury Semikhatsky.

* inspector/Inspector.json:
* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::markResourceAsCached):
(WebCore::InspectorResourceAgent::didLoadResourceFromMemoryCache):
(WebCore::InspectorResourceAgent::setExtraHTTPHeaders):
(WebCore::InspectorResourceAgent::getResponseBody):
* inspector/InspectorResourceAgent.h:
* inspector/front-end/ExtensionServer.js:
(WebInspector.ExtensionServer.prototype._onAddRequestHeaders):
* inspector/front-end/NetworkManager.js:
(WebInspector.NetworkManager.prototype.requestContent):
(WebInspector.NetworkDispatcher.prototype.requestServedFromCache):
(WebInspector.NetworkDispatcher.prototype.requestServedFromMemoryCache):

Canonical link: https://commits.webkit.org/84458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95613 268f45cc-cd09-0410-ab3c-d52691b4dbfc