Source/WebCore/inspector/InspectorResourceAgent.h
@@ -124,8 +124,8 @@ public:
     void enable(ErrorString*);
     void disable(ErrorString*);
     void setUserAgentOverride(ErrorString*, const String& userAgent);
-    void setExtraHeaders(ErrorString*, PassRefPtr<InspectorObject>);
-    void getResourceContent(ErrorString*, const String& requestId, String* content, bool* base64Encoded);
+    void setExtraHTTPHeaders(ErrorString*, PassRefPtr<InspectorObject>);
+    void getResponseBody(ErrorString*, const String& requestId, String* content, bool* base64Encoded);
     void clearCache(ErrorString*, const String* const optionalPreservedLoaderId);
 
     void clearBrowserCache(ErrorString*);
